# gores-mapgen

./: Cargo.toml  README.md  automap_out.map  testing_formulas.py  update_gen_config.py
.github/workflows/: ci.yml  lint.yml  rust.yml
automapper/: amazing_freeze.rules
bridge/: Cargo.toml  automap_test.map
bridge/src/: app.rs  color_macros.rs  econ.rs  main.rs
configs/: config.json  config2.json  cracky.json  cringe4teero.json  cringe4teero2.json  default.json  easy.json  hard.json  hardV2.json  insane.json  insaneV2.json  main.json  main_new.json  skips.json
core/: Cargo.toml
core/src/: config.rs  generator.rs  lib.rs  map.rs  position.rs  post_processing.rs  random.rs  walker.rs
data/automapper/: glyph_blocks.rules  grass_mind.rules  modern_freeze.rules  precious_stones.rules  slate_walls_basic.rules  stonish.rules
data/basemaps/: grass.map  grass_old.map
data/configs/exp/: default.json
data/configs/map/: large_spiral.json
data/gen_archive/: 1tilerz.json  cracky.json  hard.json  hard_obstacles.json  insane.json  insaneV1.json  insaneV2.json
data/gen_configs/: 1tilerz.json  1tilerz_stable.json  ant_nest.json  cracky.json  easy.json  easy_stable.json  greedy.json  hard.json  hardV2.json  hard_obstacles.json  hard_stable.json  hard_stable2.json  hard_stable3.json  hard_stable4.json  insane.json  insaneV2.json  insaneV3.json  insane_stable.json  main.json  mainV2.json  mainV2_stable.json  main_stable.json  maze.json  maze2.json
data/map_configs/: climb.json  downhill.json  hor_line.json  small_s.json  small_s_tight.json  small_s_tight2.json  spiral_map.json  tower.json
docs/: corner_candidate_shapes.xopp
exporter/: Cargo.toml
exporter/src/: exporter.rs  lib.rs  main.rs
gui/: Cargo.toml
gui/src/: editor.rs  gui.rs  main.rs  rendering.rs
measure/: Cargo.toml
measure/src/: main.rs
old/: extreme.json
src/: args.rs  config.rs  debug.rs  editor.rs  fps_control.rs  generator.rs  grid_render.rs  grid_test.rs  gui.rs  kernel.rs  kernel_test.rs  lib.rs  main.rs  map.rs  map_camera.rs  noise.rs  playtest_debug.rs  position.rs  post_processing.rs  random.rs  rendering.rs  test.map  twmap_export.rs  twmap_test.rs  utils.rs  walker.rs
