[package]
name = "gores-mapgen-rust"
version = "0.1.0"
edition = "2021"
default-run = "main"

# [features]
# ddnet_bridge = ["dep:regex", "dep:telnet"]

[[bin]]
name = "camera_test"

[[bin]]
name = "kernel_test"

[[bin]]
name = "twmap_test"

[[bin]]
name = "ddnet_bridge"
# required-features = ["ddnet_bridge"]

[dependencies]
# egui-macroquad = { git = "https://github.com/optozorax/egui-macroquad", default-features = false, rev="dfbdb967d6cf4e4726b84a568ec1b2bdc7e4f492" }
# macroquad = "0.4.4"
# egui = "0.25.0"
egui_struct = { version = "0.4", default-features = false, features = [ "egui21" ] }
egui-macroquad = "0.15.0"
 
egui = "0.21.0"
egui-miniquad = "0.14.0"
macroquad = "0.3.25"

ndarray = "0.15.6"
rand = {version="0.8.5", features=['small_rng']}
seahash = "4.1.0"
rand_distr = "0.4.3"
itertools = "0.12.1"
twmap = "0.12.0"
telnet = "0.2.1"
regex = "1.10.4"
clap = { version = "4.5.4", features = ["derive"] }
# regex = { version = "1.10.4", optional = true }
# telnet = { version = "0.2.1", optional = true }



[dev-dependencies]
telnet = { version = "0.2.1"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
panic = "abort"                    # abort on panic!()
lto = true                      # enable link time optimization
strip = true                    # strip debug symbols
codegen-units = 1               # use a single codegen-unit for better optimizations
