[package]
name = "gores-mapgen"
version = "1.0.3"
edition = "2021"
default-run = "gores-generator"

[[bin]]
name = "gores-generator"
path = "src/main.rs"

[[bin]]
name = "twmap_test"

[[bin]]
name = "config_points"

[[bin]]
name = "benchmark"

[dependencies]
egui-macroquad = "0.15.0"
 
egui = "0.21.0"
egui-miniquad = "0.14.0"
macroquad = "0.3.25"

ndarray = "0.15.6"
rand = {version="0.8.5", features=['small_rng']}
seahash = "4.1.0"
rand_distr = "0.4.3"
twmap = "0.12.0"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
dirs = "5.0.1"
serde = "1.0.197"
serde_json = "1.0.115"
rust-embed = "8.3.0"
tinyfiledialogs = "3.9.1"

# dt = "1.0.6"
dt = {git = "https://github.com/iMilchshake/dt"}
derivative = "2.2.0"
timing = "0.2.3"
log = "0.4.22"
simple_logger = "5.0.0"
base64 = "0.22.1"
seed_gen = "1.1.0"
indicatif = "0.17.8"
noise = "0.9.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
# panic = "abort"                    # abort on panic!()
lto = true                      # enable link time optimization
strip = true                    # strip debug symbols
codegen-units = 1               # use a single codegen-unit for better optimizations
