[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
itertools = "0.12.1"

log = "0.4.21"
simple_logger = "5.0.0"

serde = "1.0.197"
serde_json = "1.0.115"

twmap = "0.12.0"
mapgen_core = { package = "core", path = "../core" }
mapgen_exporter = { package = "exporter", path = "../exporter" }
