[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
derivative = "2.2.0"

serde = "1.0.197"
serde_json = "1.0.115"

seahash = "4.1.0"
rand = { version = "0.8.5", features = ['small_rng'] }
rand_distr = "0.4.3"

twmap = "0.12.0"

dt = { git = "https://github.com/iMilchshake/dt" }
