[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_distr = "0.4.3"

serde = "1.0.197"
serde_json = "1.0.115"
clap = { version = "4.5.4", features = ["derive", "cargo"] }

egui = "0.21.0"
egui_struct = { version = "0.4", default-features = false, features = [ "egui21" ] }
egui-miniquad = "0.14.0"
egui-macroquad = "0.15.0"
macroquad = "0.3.25"
tinyfiledialogs = "3.9.1"

log = "0.4.21"
simple_logger = "5.0.0"

ndarray = "0.15.6"
twmap = "0.12.0"

mapgen_core = { package = "core", path = "../core" }
mapgen_exporter = { package = "exporter", path = "../exporter" }
